{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 35,
  "lineage": "a4eeca80-c7c8-67e1-5a56-9659ea1c132b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00456421e33d18c13",
            "arn": "arn:aws:ec2:us-west-2:445237076926:elastic-ip/eipalloc-00456421e33d18c13",
            "association_id": "eipassoc-09f577666dec1540f",
            "domain": "vpc",
            "id": "eipalloc-00456421e33d18c13",
            "network_border_group": "us-west-2",
            "network_interface": "eni-019df6d3b4d17d1e1",
            "private_dns": "ip-10-0-1-62.us-west-2.compute.internal",
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-52-37-198-107.us-west-2.compute.amazonaws.com",
            "public_ip": "52.37.198.107",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-NAT-EIP"
            },
            "tags_all": {
              "Name": "Badger-NAT-EIP"
            }
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:internet-gateway/igw-083a43be666683533",
            "id": "igw-083a43be666683533",
            "owner_id": "445237076926",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-IGW"
            },
            "tags_all": {
              "Name": "Badger-IGW"
            },
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00456421e33d18c13",
            "association_id": "eipassoc-09f577666dec1540f",
            "connectivity_type": "public",
            "id": "nat-046a5271ce8ce2127",
            "network_interface_id": "eni-019df6d3b4d17d1e1",
            "private_ip": "10.0.1.62",
            "public_ip": "52.37.198.107",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-099d0ed5d305b365b",
            "tags": {
              "Name": "Badger-NAT-Gateway"
            },
            "tags_all": {
              "Name": "Badger-NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:route-table/rtb-0b9e24ba0786a4acf",
            "id": "rtb-0b9e24ba0786a4acf",
            "owner_id": "445237076926",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046a5271ce8ce2127",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Badger-Private-Route-Table"
            },
            "tags_all": {
              "Name": "Badger-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:route-table/rtb-0373cfa816293ebc3",
            "id": "rtb-0373cfa816293ebc3",
            "owner_id": "445237076926",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083a43be666683533",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Badger-Public-Route-Table"
            },
            "tags_all": {
              "Name": "Badger-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0874cb88f7e4d98aa",
            "region": "us-west-2",
            "route_table_id": "rtb-0b9e24ba0786a4acf",
            "subnet_id": "subnet-0ca959b58bfd815f3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09457c257eb6edf21",
            "region": "us-west-2",
            "route_table_id": "rtb-0b9e24ba0786a4acf",
            "subnet_id": "subnet-02b734d1b0c7ed26c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03267ecbcc51a5879",
            "region": "us-west-2",
            "route_table_id": "rtb-0373cfa816293ebc3",
            "subnet_id": "subnet-099d0ed5d305b365b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d09bf2029b1a359b",
            "region": "us-west-2",
            "route_table_id": "rtb-0373cfa816293ebc3",
            "subnet_id": "subnet-02d431c3aa47daa35"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:security-group/sg-0b134f8c3742139b8",
            "description": "Allows HTTP/S traffic from the internet and sends it to ECS Fargate.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b134f8c3742139b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Badger-ALB-SG",
            "name_prefix": "",
            "owner_id": "445237076926",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Badger-ALB-SG"
            },
            "tags_all": {
              "Name": "Badger-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:security-group/sg-0a7632805c3e9914d",
            "description": "Allows traffic from ALB and connects to RDS.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound over NAT Gateway",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow Postgres traffic to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b974650f26de01f0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0a7632805c3e9914d",
            "ingress": [],
            "name": "Badger-Backend-SG",
            "name_prefix": "",
            "owner_id": "445237076926",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Badger-Backend-SG"
            },
            "tags_all": {
              "Name": "Badger-Backend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:security-group/sg-0b974650f26de01f0",
            "description": "Allows traffic only from the Spring Boot API containers (ECS Fargate).",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b974650f26de01f0",
            "ingress": [],
            "name": "Badger-RDS-SG",
            "name_prefix": "",
            "owner_id": "445237076926",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Badger-RDS-SG"
            },
            "tags_all": {
              "Name": "Badger-RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from the ALB",
            "from_port": 8080,
            "id": "sgrule-2670106923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-0a7632805c3e9914d",
            "security_group_rule_id": "sgr-05abc54e7382f69df",
            "self": false,
            "source_security_group_id": "sg-0b134f8c3742139b8",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_security_group.rds",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from the Spring Boot containers",
            "from_port": 5432,
            "id": "sgrule-2626952446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-0b974650f26de01f0",
            "security_group_rule_id": "sgr-0b55c35a9930da9e6",
            "self": false,
            "source_security_group_id": "sg-0a7632805c3e9914d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.rds",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:subnet/subnet-0ca959b58bfd815f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca959b58bfd815f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445237076926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Badger-Private-Subnet-1"
            },
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:subnet/subnet-02b734d1b0c7ed26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b734d1b0c7ed26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445237076926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Badger-Private-Subnet-2"
            },
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:subnet/subnet-099d0ed5d305b365b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099d0ed5d305b365b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445237076926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Badger-Public-Subnet-1"
            },
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:subnet/subnet-02d431c3aa47daa35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d431c3aa47daa35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445237076926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Badger-Public-Subnet-2"
            },
            "vpc_id": "vpc-058bdd0a0de90fb08"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:445237076926:vpc/vpc-058bdd0a0de90fb08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f3fe913b6e635f0",
            "default_route_table_id": "rtb-0053b3ff2fa4c0a05",
            "default_security_group_id": "sg-03257be73a3f6bbeb",
            "dhcp_options_id": "dopt-7a64911e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058bdd0a0de90fb08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0053b3ff2fa4c0a05",
            "owner_id": "445237076926",
            "region": "us-west-2",
            "tags": {
              "Name": "Badger-VPC"
            },
            "tags_all": {
              "Name": "Badger-VPC"
            }
          }
        }
      ]
    }
  ]
}